changed post description

--- a/content/posts/cassandra-installation/how-to-install-cassandra-4-on-windows.mdx
+++ b/content/posts/cassandra-installation/how-to-install-cassandra-4-on-windows.mdx
@@ -6,8 +6,7 @@ tags:
   - Cassandra
   - Tutorial
   - Big Data
-description: "Microsoft have made a lot of improvements and added so many new features lately for wsl.
-And I believe, as a developer this is the right and efficient way to work with both linux and windows. Instead of using VMs or downgrading to lower version. In this article I'll be showing how to install latest cassandra 4.0 in windows."
+description: "WSL has improved a lot lately. And I believe, as a developer this is the right and efficient way to work with both linux and windows. Instead of using VMs or downgrading to lower version. In this article I'll be showing how to install latest cassandra 4.0 in windows."
 featureImage: "../../featureImage/cassandra.jpg"
 ---
 
