--- a/content/posts/cassandra-installation/how-to-install-cassandra-4-on-windows.mdx
+++ b/content/posts/cassandra-installation/how-to-install-cassandra-4-on-windows.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Cassandra 4 installation on Windows using WSL"
 date: 2021-07-15
-author: "Varun Srivathsa"
+author: "Varun Srivatsa"
 tags:
   - Cassandra
   - Tutorial
