made few appearence changes

--- a/content/posts/Mathematics/maths-involved-in-Data-Science.mdx
+++ b/content/posts/Mathematics/maths-involved-in-Data-Science.mdx
@@ -9,10 +9,11 @@ description: "Probably the most important question for beginners is how much mat
 featureImage: "../../featureImage/how_much_maths.jpg"
 ---
 
-The important thing to remember is that math forms the foundation of what we're going to do. We've got maths and stats in the right corner if you see the Data Science Venn Diagram.
+The important thing to remember is that math forms the foundation of what we're going to do in Data Science. We've got maths and stats in the right corner if you see the Data Science Venn Diagram.
+
 ![Venn Diagram](./venn_diagram.jpg)
 
-But for beginners or students, who started their Data Science learning journey. The most important question is how much math is enough? Or to put it another way, why do
+But for beginners or students, who just started their Data Science learning journey. The most important question is how much math is enough? Or to put it another way, why do
 you need math at all, because you have got a computer to do it?
 
 Well, I can think of three reasons why you don't want to rely on just a computer and it's helpful to have some sound mathematical understanding.
