--- a/content/posts/cassandra-installation/how-to-install-cassandra-4-on-windows.mdx
+++ b/content/posts/cassandra-installation/how-to-install-cassandra-4-on-windows.mdx
@@ -28,7 +28,7 @@ In this article I'll be showing how to install latest Cassandra 4.0 in windows u
 
 ### Prerequisites
 
-- Install the latest version of Java 8, either the [Oracle Java Standard Edition 8](http://www.oracle.com/technetwork/java/javase/downloads/index.html) or [OpenJDK 8](http://openjdk.java.net/). To verify that you have the correct version of java installed, type `java -version`.
+- Install the latest version of Java 8, either the <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html" target="_blank">Oracle Java Standard Edition 8</a> or <a href="http://openjdk.java.net/" target="_blank">OpenJDK 8</a>. To verify that you have the correct version of java installed, type `java -version`.
 - **NOTE:** _Experimental_ support for Java 11 was added in Cassandra 4.0.
   [(CASSANDRA-9608)](https://issues.apache.org/jira/browse/CASSANDRA-9608). Running Cassandra on Java 11 is _experimental_. Do as at your own risk. For information, see [NEWS.txt](https://github.com/apache/cassandra/blob/trunk/NEWS.txt).
 - For using cqlsh, the latest version of [Python 3.6+](https://www.python.org/downloads/) or Python 2.7 (support deprecated). To verify that you have the correct version of Python installed, type `python3 --version`.
