updated the dependencies

--- a/content/case-study/bellabeat/study.mdx
+++ b/content/case-study/bellabeat/study.mdx
@@ -6,7 +6,7 @@ tags:
   - Case Study
   - Excel
   - Analytics
-  - Big Query
+  - SQL
   - Tableau
 description: "A case study, analyzing smart device fitness data to unlock new growth opportunities for the company."
 featureImage: "../../featureImage/bellabeat.png"
