fixed tags issue

--- a/content/case-study/bellabeat/study.mdx
+++ b/content/case-study/bellabeat/study.mdx
@@ -3,9 +3,7 @@ title: "How Can a Wellness Technology Company Play It Smart?"
 date: 2022-07-02
 author: "Varun Srivatsa"
 tags:
-  - Case Study
-  - Excel
-  - Analytics
+  - Data Science
   - SQL
   - Tableau
 description: "A case study, analyzing smart device fitness data to unlock new growth opportunities for the company."
